--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "fmt:check": "prettier --check ."
     },
     "dependencies": {
+        "@clerk/nextjs": "^5.0.8",
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-accordion": "^1.1.2",
         "@radix-ui/react-checkbox": "^1.0.4",
